--- a/CSS/index.css
+++ b/CSS/index.css
@@ -5,27 +5,47 @@
     text-decoration: none;
     font-family: "Roboto", serif;
     box-sizing: border-box;
+    color: black;
 }
 
 body{
     background-color: gainsboro;
 }
 
-/* THIS IS THE HEADER TEXT STYLE*/
 .header-text{
- width: 50%;
- background-color: aqua;
- text-align: left;
- color: green;
-
+  width: max-content;
+  /* background-color: green; */
+  color: black;
+  font-family: monospace;
+  font-weight: 900;
+  font-size: 30px;
+  text-decoration:underline;
+  text-transform: uppercase;
+  /* line-height: 190px; */
 }
 
-.welcome_text{
-    background-color: black;
-    width: 100vw;
-    height: 100vh;
-    color: white;
+.container {
+    line-height: 30px;
+    padding: 20px;
 }
 
 
+.btn {
+    appearance: none;
+    width: 150px;
+    height: 30px;
+    /* background-color: pink; */
+    /* border-width: 2px;
+    border-color: green; */
+    border:none;
+    border-radius:5px;
+    color: orange;
+    /* text-align: left;
+    font-size: x-large;
+    font-weight: bold; */
+    font-family: 'Courier New', Courier, monospace;
+    padding-left: 10px;
+    cursor: pointer;
+
+}
 
