--- a/CSS/index.css
+++ b/CSS/index.css
@@ -24,28 +24,60 @@ body{
   /* line-height: 190px; */
 }
 
+/* VW STANDS FOR VIEWPORT WIDTH
+    And you use this whenever you want your html div to occupy
+    the entire with of whatever screen
+    you are using to view the website
+*/
 .container {
-    line-height: 30px;
-    padding: 20px;
+ width:100vw;
+ height: 100vh;
+ /* background-color: black; */
 }
 
+.navbar {
+    width: 90%;
+    height: 100px;
+    background-color: white;
+    margin: auto;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    padding-left: 70px;
+    padding-right: 70px ;
+    box-shadow: 7px 5px 10px rgba(0, 0, 0, 0.456);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 
-.btn {
-    appearance: none;
-    width: 150px;
-    height: 30px;
-    /* background-color: pink; */
-    /* border-width: 2px;
-    border-color: green; */
-    border:none;
-    border-radius:5px;
-    color: orange;
-    /* text-align: left;
-    font-size: x-large;
-    font-weight: bold; */
-    font-family: 'Courier New', Courier, monospace;
-    padding-left: 10px;
-    cursor: pointer;
+.logo-image{
+    width: 40px;
+}
 
+.icon-image {
+    width: 20px;
+}
+
+.logo-span{
+    color: #faa320;
+}
+ 
+
+.logo-group {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.nav-link-group {
+    display: flex;
+    align-items: center;
+    gap: 60px;
+}
+
+.icon-btn-group {
+    display: flex;
+    align-items: center;
+    gap: 30px;
 }
 
