--- a/CSS/index.css
+++ b/CSS/index.css
@@ -36,6 +36,7 @@ body{
 }
 
 .navbar {
+    display: none;
     width: 90%;
     height: 100px;
     background-color: white;
@@ -45,7 +46,7 @@ body{
     padding-left: 70px;
     padding-right: 70px ;
     box-shadow: 7px 5px 10px rgba(0, 0, 0, 0.456);
-    display: flex;
+    /* display: flex; */
     align-items: center;
     justify-content: space-between;
 }
@@ -82,9 +83,31 @@ body{
 }
 
 .nav-btn {
-    background-color: aliceblue;
+    all: unset; 
+    width: 100px;
+    height: 40px;
+    border:2px solid #faa320; 
+    text-align: center;
+    border-radius: 5px;
     color: #faa320;
-    padding: 5px;
-    width: auto;
+    cursor: pointer;
 }
+
+.main-container {
+    width: 100vw;
+    height: 100%;
+}
+
+.box {
+    width: 300px;
+    height: 300px;
+    background-color: #faa320;
+}
+
+.box1{
+    width: 500px;
+    height: 500px;
+    background-color: #20fae0;
+}
+
 
